--- a/src/components/home/select-service-card/index.scss
+++ b/src/components/home/select-service-card/index.scss
@@ -1,10 +1,24 @@
+@import "styles/colors.scss";
+
 .selectServiceCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 400px;
+  height: 600px;
   padding: 20px;
+  border: 1px solid $lighterGray;
+  border-radius: 8px;
+  cursor: pointer;
+  overflow: hidden;
+
+  &-contentWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
 
   img {
     width: 60%;
@@ -12,10 +26,11 @@
   }
 
   &-title {
+    margin-top: 100px;
     margin-bottom: 10px;
   }
 
   &-subTitle {
-    margin-bottom: 40px;
+    margin-bottom: 100px;
   }
 }
