Add: 강사의 강좌 접속 모달 UI생성

--- a/src/components/lecturer/join-lecturer-modal/index.scss
+++ b/src/components/lecturer/join-lecturer-modal/index.scss
@@ -17,4 +17,11 @@
       outline: none;
     }
   }
+
+  &-buttonWrapper {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
 }
