Add: User 인터페이스 정의 및 user 프로필 로딩

--- a/src/components/inquiry/inquiry-item/index.scss
+++ b/src/components/inquiry/inquiry-item/index.scss
@@ -1,8 +1,10 @@
+@import "styles/colors.scss";
+
 .inquiryItem {
   display: flex;
   align-items: flex-start;
   width: 80%;
-  margin: 40px 0;
+  padding: 20px 0;
 
   &-profileImageWrapper {
     margin-top: 5px;
