--- a/src/components/inquiry/message-list/index.scss
+++ b/src/components/inquiry/message-list/index.scss
@@ -1,8 +1,10 @@
-.inquiryList {
+.messageList {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   width: 60%;
+  height: 100%;
+  overflow-y: auto;
 }
