Add: Inquiry 리스트에 호버 시 Pin 표시

--- a/src/components/inquiry/inquiry-item/index.scss
+++ b/src/components/inquiry/inquiry-item/index.scss
@@ -26,6 +26,12 @@
       &-classroom {
         margin-left: 5px;
       }
+
+      &-pin {
+        color: $darkerGray;
+        margin-left: 10px;
+        font-size: 0.75rem;
+      }
     }
 
     &-time {
