Add: Inquiry Pin 클릭 시 모달 Open

--- a/src/components/common/modal/index.scss
+++ b/src/components/common/modal/index.scss
@@ -3,6 +3,9 @@
 .modal {
   &-window {
     &-title {
+      user-select: none;
+      position: sticky;
+      top: 0;
       width: 100%;
       padding: 10px 15px;
       border-bottom: 1px solid $lightGray;
