--- a/src/components/common/page-template/header/index.scss
+++ b/src/components/common/page-template/header/index.scss
@@ -4,17 +4,25 @@
   position: fixed;
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100vw;
   height: 70px;
   border-bottom: 1px solid $lightGray;
   background-color: white;
   top: 0;
 
-  &-title {
-    margin-left: 20px;
-  }
+  &-serviceIntro {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 10px;
 
-  &-subTitle {
-    margin-left: 10px;
+    &-title {
+      margin-left: 20px;
+    }
+
+    &-subTitle {
+      margin-left: 10px;
+    }
   }
 }
