--- a/src/components/select-service/index.scss
+++ b/src/components/select-service/index.scss
@@ -11,5 +11,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media only screen and (max-width: 1024px) {
+      width: 100%;
+      flex-direction: column;
+    }
   }
 }
