--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,3 +6,9 @@
   box-sizing: border-box;
   font-family: "Noto Sans KR", sans-serif;
 }
+
+@media only screen and (max-width: 1024px) {
+  html {
+    font-size: 12px;
+  }
+}
