Add: 메시지 Emit 개발

--- a/src/components/common/page-template/header/index.scss
+++ b/src/components/common/page-template/header/index.scss
@@ -13,6 +13,10 @@
   top: 0;
 
   &-serviceIntro {
+    @media only screen and (max-width: 1024px) {
+      visibility: hidden;
+    }
+
     display: flex;
     align-items: center;
     position: absolute;
