--- a/src/components/lecturer/join-lecturer-modal/index.scss
+++ b/src/components/lecturer/join-lecturer-modal/index.scss
@@ -6,7 +6,7 @@
   justify-content: center;
 
   &-code {
-    margin-top: 15px;
+    margin: 15px 0 10px 0;
     font-size: 0.85rem;
     padding: 5px;
     color: $darkerGray;
