Fix: ASK를 LIVE TALK으로 변경

--- a/src/components/common/page-template/header/index.scss
+++ b/src/components/common/page-template/header/index.scss
@@ -22,8 +22,12 @@
     position: absolute;
     left: 10px;
 
-    &-title {
+    &-icon {
       margin-left: 20px;
+    }
+
+    &-title {
+      margin-left: 5px;
     }
 
     &-subTitle {
