--- a/src/components/select-service/index.scss
+++ b/src/components/select-service/index.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 80px;
   @media only screen and (max-width: 1024px) {
     margin-top: 20px;
   }
