--- a/src/components/lecturer/lecture-side-bar/lecture-side-bar-item/index.scss
+++ b/src/components/lecturer/lecture-side-bar/lecture-side-bar-item/index.scss
@@ -22,6 +22,6 @@
     align-content: center;
     justify-content: center;
     margin-right: 10px;
-    font-size: 1.25rem;
+    font-size: 18px;
   }
 }
