--- a/src/components/lecturer/lecture-side-bar/index.scss
+++ b/src/components/lecturer/lecture-side-bar/index.scss
@@ -7,4 +7,8 @@
   transition: left 0.1s;
   width: 300px;
   padding: 40px 0;
+
+  @media only screen and (max-width: 1024px) {
+    width: 150px;
+  }
 }
